# cldf_meta

./: .gitignore  README.md  cldfbench_cldf_meta.py  cldfbench_clld_meta.py  metadata.json  setup.cfg  setup.py  test.py
cldf/: README.md  cldf-metadata.json  contributions.csv  datasets.csv  languages.csv  requirements.txt
cldf_meta/: download.py  util.py
cldf_meta_commands/: updatemd.py
clld_meta/: download.py  util.py  zipdata.py
clld_meta_commands/: cleanup.py  updatemd.py
etc/: blacklist.csv  not-cldf.csv  readme-snippet.md  whitelist.csv
raw/: README.md  zenodo-metadata.csv  zenodo-metadata.json
