[metadata]
name = cldfbench_clld_meta
version = 0.0.1.dev0

[options]
zip_safe = False
include_package_data = True
install_requires =
    cldfbench[glottolog]
    cerberus
py_modules =
    cldfbench_clld_meta
packages =
    clld_meta
    clld_meta_commands
package_dir =
    clld_meta = clld_meta
    clld_meta_commands = clld_meta_commands

[options.extras_require]
test =
    pytest-cldf

[options.entry_points]
cldfbench.dataset =
    clld_meta = cldfbench_clld_meta:Dataset
cldfbench.commands =
    clld-meta = clld_meta_commands

[tool:pytest]
testpaths = test.py
addopts =
  --cldf-metadata=cldf/cldf-metadata.json
