[metadata]
name = cldfbench_cldf_meta
version = 0.0.1.dev0

[options]
zip_safe = False
include_package_data = True
install_requires =
    cldfbench[glottolog]
    cerberus
py_modules =
    cldfbench_cldf_meta
packages =
    cldf_meta
    cldf_meta_commands
package_dir =
    cldf_meta = cldf_meta
    cldf_meta_commands = cldf_meta_commands

[options.extras_require]
test =
    pytest-cldf

[options.entry_points]
cldfbench.dataset =
    cldf_meta = cldfbench_cldf_meta:Dataset
cldfbench.commands =
    cldf-meta = cldf_meta_commands

[tool:pytest]
testpaths = test.py
addopts =
  --cldf-metadata=cldf/cldf-metadata.json
